# diamond-kata

./: CMakeLists.txt  README.md  main.cpp
diamond/: CMakeLists.txt
diamond/include/diamond/: Diamond.h
diamond/src/: Diamond.cpp  DiamondInternals.cpp  DiamondInternals.h  StringUtils.cpp  StringUtils.h
diamond/tests/: DiamondInternalsTest.cpp  DiamondTest.cpp  StringUtilsTest.cpp
